--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
+@keyframes example {
+	0% {
+		color: white;
+	}
+	25% {
+		color: #15f4ee;
+	}
+	50% {
+		color: white;
+	}
+	75% {
+		color: #15f4ee;
+	}
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	color: white;
+	background-color: black;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	padding: 0;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+img {
+	height: 30vw;
+}
+a {
+	animation-name: example;
+	animation-duration: 50s;
+	animation-iteration-count: infinite;
+}
+.Top-bar {
+	height: 10px;
+	background-color: #15f4ee;
+}
+nav {
+	animation-name: example;
+	animation-name: 50s;
+	animation-iteration-count: infinite;
+	background-color: #5d5c61;
+
+	width: 100%;
+	top: 0;
+	left: 0;
+	display: inline-block;
+	font-family: 'peepo';
+	text-align: center;
+	overflow: hidden;
+}
+#intro {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	color: white;
 }
